--- a/liebe_html/index.html
+++ b/liebe_html/index.html
@@ -63,9 +63,9 @@
                   <li class="active"><a href="#page-top">Inicio</a></li>
                   <li><a href="#about">Acerca de Nosotros</a></li>
                   <li><a href="#story">Nuestra Historia</a></li>
-                  <li><a href="#attendants">Attendants</a></li>
                </ul>
                <ul class="nav navbar-nav navbar-right page-scroll">
+                  <li><a href="#attendants">Attendants</a></li>
                   <li><a href="#event">The Event</a></li>
                   <li><a href="#gallery">Galeria</a></li>
                   <li><a href="#rsvp">RSVP</a></li>
@@ -115,7 +115,7 @@
          <div class="intro-heading col-md-12 text-center" data-0="opacity:1;"
             data--100-start="transform:translatey(0%);"
             data-center-bottom="transform:translatey(30%);">
-            <h1>María <span class="italic"> & </span> Elkin
+            <h1>Elkin <span class="italic"> & </span> María
             </h1>
             <h5 class="margin1 text-ornament">Nuestro 4to Aniversario</h5>
          </div>
@@ -234,7 +234,7 @@
       <section id="story">
          <div class="container">
             <div class="section-heading">
-               <h2>Nuestra Historia/h2>
+               <h2>Nuestra Historia</h2>
                <!-- divider -->
                <div class="hr"></div>
             </div>
