--- a/liebe_html/index.html
+++ b/liebe_html/index.html
@@ -153,7 +153,7 @@
                   </p>
                   <div class="margin1">
                      <!-- countdown tag -->
-                     <span id="countdown"></span>
+                     <span id="timer"></span>
                      <!-- edit the countdown in the main.js file-->
                   </div>
                   <!-- /margin1-->
@@ -854,5 +854,8 @@
       <script src="js/prefixfree.js"></script>
       <!-- Open Street maps-->
       <script src="js/map.js"></script>	
+      <!-- count-->
+      <script src="js/count.js"></script>	
+      
    </body>
 </html>
