--- a/liebe_html/index.html
+++ b/liebe_html/index.html
@@ -9,7 +9,7 @@
       <meta name="description" content="Elkin Y María">
       <meta name="author" content="Elkin López">
       <!-- Page title -->
-      <title>Elkin Y María | 4to Aniversario </title>
+      <title>Elkin Y María | 4° Aniversario </title>
       <!--[if lt IE 9]>
       <script src="js/respond.js"></script>
       <![endif]-->
@@ -68,7 +68,7 @@
                <ul class="nav navbar-nav navbar-right page-scroll">
                   <li><a href="#attendants">Attendants</a></li>
                   <li><a href="#event">The Event</a></li>
-                  <li><a href="#gallery">Galeria</a></li>
+                  <li><a href="#gallery">Galería</a></li>
                   <li><a href="#rsvp">RSVP</a></li>
                   <li class="dropdown">
                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">Pages<b class="caret"></b></a>
@@ -118,7 +118,7 @@
             data-center-bottom="transform:translatey(30%);">
             <h1>Elkin <span class="italic"> & </span> María
             </h1>
-            <h5 class="margin1 text-ornament">Nuestro 4to Aniversario</h5>
+            <h5 class="margin1 text-ornament">Nuestro 4<sup>to</sup>  Aniversario</h5>
          </div>
          <!-- /col-md-6-->
       </section>
@@ -148,9 +148,11 @@
                      <div class="hr"></div>
                   </div>
                   <!--/section heading -->
-                  <h5 class="margin1">Please RSVP before 15th January 2022</h5>
+                  <h5 class="margin1">Nuestro dia ha llegado</h5>
                   <p>
-                     Viverra elit liquam erat volut pat phas ellus ac lorem ipsuet sodales Lorem ipsum dolor sit amet, consectetur adipisicing elit uasi quidem minus id iprum omnis metus.
+                     A veces no sé si me echas de menos o te olvidas de mí, pero cada día me digo que el amor que compartimos nos mantendrá unidos. No estamos tan lejos, durante el día caminamos bajo el mismo sol y durante la noche compartimos la misma luna. Cada noche sueño con el día en que pueda estar a tu lado, en ese momento sabré que todo ha valido la pena.
+                     A medida que el reloj avanza, recuerdo que es sólo el tiempo que pasa hasta que llegue la oportunidad pasarlo contigo. Estoy seguro que pronto estaremos juntos y no volveremos a separarnos. Te confieso que extraño tus caricias, tu olor, tu mirada y tus abrazos y que cuando te fuiste, te llevaste mi corazón, así que regresa pronto para que lo pueda recuperar.
+                     Mi amor, no puedo esperar a oír el latido de tu corazón, y no puedo esperar a tenerte cerca de mí. Me muero de ganas de mirarte a los ojos y decirte en persona: Te amo.
                   </p>
                   <div class="margin1">
                      <!-- countdown tag -->
@@ -184,7 +186,7 @@
             <div class="col-md-5 col-md-offset-1">
                <img src="img/bride.jpg" alt="" class="main-img img-responsive img-circle"/>
                <h4 class="text-ornament">Maria</h4>
-               <h6 class="main-subheader">Una mujer de espiritu libre</h6>
+               <h6 class="main-subheader">Una mujer de espíritu libre</h6>
                <p>
                   Imperdiet interdum donec eget metus auguen unc vel lorem ispuet Ibu lum orci eget, viverra elit liquam erat volut pat phas ellus ac sodales Lorem ipsum dolor sit amet, consectetur adipisicing elit uasi quidem minus id iprum omnis.
                   Lorem ipsum dolor  Phas ellus ac sodales felis tiam.
@@ -204,7 +206,7 @@
             <div class="col-md-5 res-margin">
                <img src="img/groom.jpg" alt="" class="main-img img-responsive img-circle"/>
                <h4 class="text-ornament">Elkin</h4>
-               <h6 class="main-subheader">Romantico desesperado</h6>
+               <h6 class="main-subheader">Romántico empedernido</h6>
                <p>
                   Imperdiet interdum donec eget metus auguen unc vel lorem ispuet Ibu lum orci eget, viverra elit liquam erat volut pat phas ellus ac sodales Lorem ipsum dolor sit amet, consectetur adipisicing elit uasi quidem minus id iprum omnis.
                   Lorem ipsum dolor  Phas ellus ac sodales felis tiam.
