--- a/liebe_html/index.html
+++ b/liebe_html/index.html
@@ -184,11 +184,10 @@
             <!-- Bride Info -->
             <div class="col-md-5 col-md-offset-1">
                <img src="img/bride.jpg" alt="" class="main-img img-responsive img-circle"/>
-               <h4 class="text-ornament">Maria</h4>
+               <h4 class="text-ornament">María</h4>
                <h6 class="main-subheader">Una mujer de espíritu libre</h6>
                <p>
-                  Imperdiet interdum donec eget metus auguen unc vel lorem ispuet Ibu lum orci eget, viverra elit liquam erat volut pat phas ellus ac sodales Lorem ipsum dolor sit amet, consectetur adipisicing elit uasi quidem minus id iprum omnis.
-                  Lorem ipsum dolor  Phas ellus ac sodales felis tiam.
+                  Una mujer comprometida con sus metas, con su felicidad y que busca vivir cada experiencia tomando lo mejor de las situaciones que se presentan. Apasionada de los viajes y de su profesión. Una mujer de un corazón inmenso, alegre, fuerte, amorosa, perseverante, inteligente, y valiente. Una luz que da esperanza y contagia de buena energía a todo los que la rodean. Una mujer que inspira a todos a superarse y dar lo mejor de si.
                </p>
                <!-- small social-icons -->	
                <div class="social-media smaller">
@@ -250,8 +249,8 @@
                      data-center="transform:translatey(0%);transform:rotate(-4deg)" >
                      <a href="img/polaroid1.jpg" data-gal="prettyPhoto[gallery]">
                         <img alt="" src="img/polaroid1.jpg" class="img-responsive"/>
-                        <span>2010</span>
-                        <p>Our first trip together after dating for 3 Months</p>
+                        <span>2018</span>
+                        <p>Cuando te conocí</p>
                      </a>
                   </li>
                   <!-- image2 -->
@@ -260,7 +259,7 @@
                      <a href="img/polaroid2.jpg" data-gal="prettyPhoto[gallery]">
                         <img alt="" src="img/polaroid2.jpg" class="img-responsive"/>
                         <span>2012</span>
-                        <p>Moving Together...</p>
+                        <p>Nuestra primera foto</p>
                      </a>
                   </li>
                   <!-- image3 -->
