--- a/liebe_html/index.html
+++ b/liebe_html/index.html
@@ -191,7 +191,12 @@
             <h4 class="text-ornament">Maria</h4>
             <h6 class="main-subheader">Una mujer de espíritu libre</h6>
             <p>
-               Mujer hermosa inteligente
+               Mujer hermosa independiente, inteligente, culta, aventurera, dificil de impresionar, fuerte, honesta,
+               noble, vlaliente, decidida, genuina y aveces hasta complicada puedes llegar a ser pueda ser muy estricta
+               y dura, hasta con ella misma. Eres increible, inigualable y vales mucho mas de lo que tu mismo te haces
+               creer. Puedes lograr todo lo que te propongas aun en las situaciones mas adversas. Tus sueños no se te
+               hacen tan grandes por que eres mas grandiosa tu. Inspiras mucho a todas las personas que rodeas con tu
+               buena energia y por todo lo que has logrado. La mujer con la sonrisa mas hermosa.
             </p>
             <!-- small social-icons -->
             <!-- <div class="social-media smaller">
@@ -210,10 +215,7 @@
             <h4 class="text-ornament">Elkin</h4>
             <h6 class="main-subheader">Romántico empedernido</h6>
             <p>
-               Imperdiet interdum donec eget metus auguen unc vel lorem ispuet Ibu lum orci eget, viverra elit liquam
-               erat volut pat phas ellus ac sodales Lorem ipsum dolor sit amet, consectetur adipisicing elit uasi quidem
-               minus id iprum omnis.
-               Lorem ipsum dolor Phas ellus ac sodales felis tiam.
+
             </p>
             <!-- small social-icons -->
             <div class="social-media smaller">
@@ -524,6 +526,186 @@
                      <img alt="" src="img/polaroid30.png" class="img-responsive" />
                      <span>Febrero 2020</span>
                      <p>Pinta carnavalera</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image29 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid31.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid31.png" class="img-responsive" />
+                     <span> Marzo a Julio 2020 </span>
+                     <p>Una de nuestras tantas videollamadas en pandemia</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image30 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid32.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid32.png" class="img-responsive" />
+                     <span> Agosto 2020 </span>
+                     <p></p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image31 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid33.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid33.png" class="img-responsive" />
+                     <span> Septiembre 2020 </span>
+                     <p>Con mi superenfermera cuando me enferme</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image32 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid34.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid34.png" class="img-responsive" />
+                     <span> Octubre 2020 </span>
+                     <p>Nuestro segundo aniversario en la plaza Simo Bolivar</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image33 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid35.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid35.png" class="img-responsive" />
+                     <span> Noviembre 2020 </span>
+                     <p>Dia de Spa en Casa</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image34 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid36.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid36.png" class="img-responsive" />
+                     <span> Diciembre 2020 </span>
+                     <p>Dia de velitas</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image34 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid47.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid47.png" class="img-responsive" />
+                     <span> Diciembre 2020 </span>
+                     <p>Dia de velitas</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image35 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid37.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid37.png" class="img-responsive" />
+                     <span> Diciembre 2020 </span>
+                     <p>La mejor sensacion del mundo que duermas en mi pecho</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image36 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid38.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid38.png" class="img-responsive" />
+                     <span> Diciembre 2020 </span>
+                     <p>Tu foto favorita</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image37 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid39.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid39.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>Precumple, linda noche, baile amazisao, Amigos y Familia</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image38 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid40.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid40.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>Asadito de cumpleaños y Rio</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image39 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid41.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid41.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>Celebrando tus 23, se equivocaron con los globos</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image40 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid42.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid42.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>En la comelona Jajaja</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image41 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid43.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid43.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>Puebleando en el Silencio</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image42 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid44.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid44.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>Dejando huella de nuestro amor en el Silencio</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image43 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid45.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid45.png" class="img-responsive" />
+                     <span> Enero 2021 </span>
+                     <p>Manillita de pareja, Disfrutando el rio</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image44 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid46.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid46.png" class="img-responsive" />
+                     <span> Febrero 2021 </span>
+                     <p>Mi mejor foto familiar, En el bautizo de tu ahijadita</p>
+                  </a>
+               </li>
+               <!-- /li polaroid -->
+               <!-- image44 -->
+               <li class="polaroid-item" data-0="transform:translatey(0%);"
+                  data-center="transform:translatey(0%);transform:rotate(-12deg)">
+                  <a href="img/polaroid48.png" data-gal="prettyPhoto[gallery]">
+                     <img alt="" src="img/polaroid48.png" class="img-responsive" />
+                     <span> Marzo 2021 </span>
+                     <p>Una de tantas salidas a comer heladito</p>
                   </a>
                </li>
                <!-- /li polaroid -->
@@ -1062,8 +1244,9 @@
          <!-- /col-md-12 -->
          <!-- Credits-->
          <div class="credits col-md-12 text-center">
-            Copyright © 2020 - Designed by <a href="http://www.ingridkuhn.com">Ingrid Kuhn</a>
-            <!-- Go To Top Link -->
+            <p>
+               Designed with <span id="corazon">❤</span> by <strong class="frontend">Elkin López</strong>
+            </p>
             <div class="page-scroll hidden-sm hidden-xs">
                <a href="#page-top" class="back-to-top"><i class="fa fa-angle-up"></i></a>
             </div>
